# llm_ros

./: .gitignore  README.md
llm_msgs/: CMakeLists.txt  package.xml
llm_msgs/srv/: Prompt.srv
llm_ros/: package.xml  setup.py
llm_ros/llm_ros/: ollama_node.py
